# AUTOMATED-VIDEO-EDITING

./: .gitignore  Dockerfile  README.md  metadata.quick.yaml  metadata.sample.yaml  metadata.yaml  pyproject.toml  requirements.txt  run.ps1
ai_video_editor/: __init__.py  audio.py  captions.py  cli.py  config.py  enhancements.py  export.py  highlight.py  logger.py  media_probe.py  overlays.py  pipeline.py  transcription.py  transitions.py  utils.py
tests/: test_config_and_probe.py
