[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-video-editor-automation"
version = "0.1.0"
description = "Automated AI-driven video editing pipeline"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
ai-video-editor = "ai_video_editor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_video_editor*"]
